// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it fetches again after changing the uri prop (but not other props): api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": "{}",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  Array [
    "/djedi/load_many",
    Object {
      "body": "{}",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it fetches again after changing the uri prop (but not other props): first render 1`] = `
<span
  data-i18n="en-us@first"
>
  first
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): second render 1`] = `
<span
  data-i18n="en-us@second"
>
  second
</span>
`;

exports[`it fetches again after changing the uri prop (but not other props): third render (same uri, no edit) 1`] = `"second"`;

exports[`it renders loading and then the node: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": "{}",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders loading and then the node: loading 1`] = `"Loading…"`;

exports[`it renders loading and then the node: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": undefined,
}
`;

exports[`it renders loading and then the node: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`it renders synchronously if the node is already in cache: api call 1`] = `
Array [
  Array [
    "/djedi/load_by_prefix",
    Object {
      "body": "[\\"home/\\"]",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders synchronously if the node is already in cache: browser 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it renders synchronously if the node is already in cache: loadByPrefix result 1`] = `
Object {
  "i18n://en-us@home/intro.txt": "Welcome to our amazing website!",
}
`;

exports[`it renders synchronously if the node is already in cache: with value 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;

exports[`it warns when passing a non-string as default/children: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": "{\\"i18n://en-us@test.txt\\":\\"A ,[object Object]\\"}",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it warns when passing a non-string as default/children: console.error 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`children\` of type \`array\` supplied to \`Node\`, expected \`string\`.
    in Node",
  ],
]
`;

exports[`it warns when passing a non-string as default/children: loading 1`] = `"Loading…"`;

exports[`it warns when passing a non-string as default/children: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;
